# AIonDemandCluster

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  smoke.yml
aiod/: __init__.py  __main__.py  bench.py  bootstrap.py  branding.py  ccr.py  cli.py  config.py  engine.py  events.py  health.py  hf.py  model_configs.py  onboard.py  optimizations.py  profiles.py  providers.py  proxy.py  runpod.py  sizing.py  state.py  translate.py  tui.py  tune.py  vast.py  watch.py
aiod/web/: chat.html
tests/: test_bench.py  test_bootstrap.py  test_ccr.py  test_chat.py  test_cli_up.py  test_events.py  test_hf.py  test_live.py  test_model_configs.py  test_onboard.py  test_optimizations.py  test_profiles.py  test_proxy.py  test_runpod.py  test_sizing.py  test_state.py  test_translate.py  test_tune.py  test_vast.py  test_watch.py
