[project]
name = "aiondemandcluster"
version = "0.2.0"
description = "AI on Demand — spin up a HuggingFace model on vast.ai GPUs and drive it from Claude Code via Claude Code Router."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AIonDemandCluster contributors" }]
keywords = ["vast.ai", "vllm", "llm", "claude-code", "gpu", "inference"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.79",
    "httpx>=0.27",
    "platformdirs>=4.2",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.0"]

[project.scripts]
aiod = "aiod.cli:app"

[project.urls]
Homepage = "https://github.com/jhammant/AIonDemandCluster"
Repository = "https://github.com/jhammant/AIonDemandCluster"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aiod"]

[tool.pytest.ini_options]
# `live` tests hit real vendor APIs (vast/runpod/HF) and are excluded from the
# default run so `pytest tests/` stays hermetic. Run them with `pytest -m live`.
markers = [
    "live: probes real vendor endpoints; excluded by default (run via `pytest -m live`)",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: typer.Option(...) in argument defaults is the standard Typer idiom.
ignore = ["B008"]
